--- a/doc/using-tree-edit.org
+++ b/doc/using-tree-edit.org
@@ -1,4 +1,3 @@
-
 Documentation on using the tree-edit library. More to come!
 
 * Rolling your own tree-edit commands
@@ -49,13 +48,12 @@ objects selecting the entire line.
 
 * Adding new languages to tree-edit
 
-1. [[https://github.com/cask/cask][Install cask]]
-2. Clone [[https://github.com/emacs-tree-sitter/tree-sitter-langs][tree-sitter-langs]]
-3. Run =cask emacs --script dev/tree-edit-generate-grammars.el <tree-sitter-langs>/repos/<language>/src/grammar.json <language> <language-mode>= in tree-edit root. This will generate two files: =tree-edit-<language>.el= and =tree-edit-<language>-grammar.el=. The grammar file should never needed to be modified, while =tree-edit-<language>.el= is a template that should be configured.
+1. [[https://github.com/cask/cask][Install Cask]]
+2. Install grammar using =tree-edit-install-grammar=
+3. Copy one of the language files (=tree-edit-python.el= or similar) and adapt it to the new language
 4. Add language to =tree-edit-language-alist=
 5. See what breaks!
 
 ** Customizing languages
 
-Check out the docstrings of the variables used in =tree-sitter-java.el= and the
-pre-existing language files to see how to customize languages.
+Check out the docstrings of the variables used in =tree-sitter-python.el= and the pre-existing language files to see how to customize languages.
