--- a/doc/evil-tree-edit.org
+++ b/doc/evil-tree-edit.org
@@ -16,20 +16,20 @@
 * Getting started
 =evil-tree-edit= can be installed on MELPA.
 
-After installation, add hooks for any language you'd like tree-edit to
+Many, if not all languages will require custom grammars to be installed. See
+main README for instructions.
+
+
+After installation, add hooks for any language you'd like evil-tree-edit to
 automatically enable in.
 
 #+begin_src elisp
 (add-hook 'java-mode-hook #'evil-tree-edit-mode)
 #+end_src
 
-It's also recommended to use tree-edit with an autoformatter in it's current
-state, as tree-edit does not always produce text consistent in formatting with
-the surrounding nodes. If your language provides a performant formatter, you can
-even run it after every editing operation:
-#+begin_src elisp
-(add-hook 'evil-tree-edit-after-change-hook #'my-format-buffer-command)
-#+end_src
+It's also recommended to use tree-edit alongside an autoformatter in it's
+current state, as tree-edit does not always produce text consistent in
+formatting with the surrounding nodes.
 
 * Usage
 The concept of the *cursor*, a position in the 2D plane of text, is replaced by
