--- a/README.org
+++ b/README.org
@@ -39,12 +39,13 @@ how the syntax generation works.
 
 * Supported languages
 
-| Status | Language |
-|--------+----------|
-| ✅     | [[https://github.com/ethan-leba/tree-edit/issues/33][Python]]   |
-| 🔨     | [[https://github.com/ethan-leba/tree-edit/issues/54][C]]        |
-| 🔨     | [[https://github.com/ethan-leba/tree-edit/issues/34][Java]]     |
+| Status | Language       |
+|--------+----------------|
+| ✅     | [[https://github.com/tree-edit/tree-sitter-python][Python]] ([[https://github.com/ethan-leba/tree-edit/issues/33][issue]]) |
+| 🔨     | [[https://github.com/tree-edit/tree-sitter-c][C]] ([[https://github.com/ethan-leba/tree-edit/issues/54][issue]])      |
+| 🔨     | [[https://github.com/tree-edit/tree-sitter-java][Java]] ([[https://github.com/ethan-leba/tree-edit/issues/34][issue]])   |
 
+See links for grammar repository and issue tracker respectively.
 
 | ✅ | Supported               |
 | 🔨 | Under development       |
@@ -52,7 +53,8 @@ how the syntax generation works.
 Tree-edit is designed to be as language-agnostic as possible. Currently the list
 of supported languages is not very impressive, but /in theory/ it should be as
 simple as running a script to preprocess a grammar and adding a configuration
-file for the language.
+file for the language. In practice the grammars usually also need modifications
+in order to make the grammar ergonomic for structural modification.
 
 See [[https://github.com/ethan-leba/tree-edit/blob/main/doc/using-tree-edit.org#adding-new-languages-to-tree-edit][here]] to learn the process for adding a new language.
 
