--- a/doc/evil-tree-edit.org
+++ b/doc/evil-tree-edit.org
@@ -14,15 +14,10 @@
 :END:
 
 * Getting started
-The =evil-tree-edit= can be installed on MELPA.
-
-Many, if not all languages will require custom grammars to be installed.
-#+begin_src elisp
-(with-demoted-errors ""
-  (require 'tree-sitter-langs)
-  (tree-sitter-langs-ensure 'te-python "~/Dropbox/tree-sitter-python")
-  (push '(python-mode . te-python) tree-sitter-major-mode-language-alist))
-#+end_src
+=evil-tree-edit= can be installed on MELPA.
+# FIXME
+Many, if not all languages will require custom grammars to be installed. See how
+to do that here.
 
 After installation, add hooks for any language you'd like evil-tree-edit to
 automatically enable in.
@@ -31,9 +26,9 @@ automatically enable in.
 (add-hook 'java-mode-hook #'evil-tree-edit-mode)
 #+end_src
 
-It's also recommended to use evil-tree-edit with an autoformatter in it's current
-state, as tree-edit does not always produce text consistent in formatting with
-the surrounding nodes.
+It's also recommended to use tree-edit alongside an autoformatter in it's
+current state, as tree-edit does not always produce text consistent in
+formatting with the surrounding nodes.
 
 * Usage
 The concept of the *cursor*, a position in the 2D plane of text, is replaced by
